--- a/my_wordpress/docker-compose.yml
+++ b/my_wordpress/docker-compose.yml
@@ -1,7 +1,8 @@
-version: '3.3'
-
+version: "3.3"
+volumes:
+  db_data:
 services:
-   db:
+  db:
      image: mysql:5.7
      volumes:
        - db_data:/var/lib/mysql
@@ -11,8 +12,7 @@ services:
        MYSQL_DATABASE: wordpress
        MYSQL_USER: wordpress
        MYSQL_PASSWORD: wordpress
-
-   wordpress:
+  wordpress:
      depends_on:
        - db
      image: wordpress:latest
@@ -23,5 +23,3 @@ services:
        WORDPRESS_DB_HOST: db:3306
        WORDPRESS_DB_USER: wordpress
        WORDPRESS_DB_PASSWORD: wordpress
-volumes:
-    db_data:
